--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,20 @@
-.App {
-  text-align: center;
+html{
+  background-color:#f2e8ed;
+  
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#root{
+  width:100%;
+  height:100%;
+  display:flex;
+  background-color:#f2e8ed;
 }
+ 
 
-.App-link {
-  color: #61dafb;
-}
+.App{
+  flex:1;
+  display:flex;
+  flex-direction:column;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
